Publish slides, video for 304, PS#6 for 304, PS#7 for 363 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	new file:   S23/304/304S23P06_ENC+INTER.docx 	modified:   S23/304/304S23PS.HTM 	new file:   S23/304/304S23_RC_TRK.HTM 	new file:   S23/304/Rotary_Encoder_track_detail.gif 	modified:   S23/363/363S23PS.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -180,17 +180,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/255594360/download?download_frd=1"><!-- -->
 	  2/13<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/255747620/download?download_frd=1"><!-- -->
-      2/15<!-- --></a><!-- --><br><!-- -<a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/17<!-- -</a><!-- --></td>
+      2/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/255875140/download?download_frd=1"><!-- -->
+      2/17<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=8q68aVovt_I">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=id34Csame5k">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=6Zfin_AIDT4">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Temp sensor example, "App's fault" devotional, Types of motors<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Stepper windings, rotor designs, Speed v. Torque for DC motors<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Stepper motors: Half-step, Microstep, Hold v. run torque, H-bridge<!--end comment--></td>  
    </TR><!-- Week of 2/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
