--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/17/2023 9:45 am)
+                              >(Last update:   2/17/2023 4:06 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -91,8 +91,8 @@ PS                                                       </small>
         2/17<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/24<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29636978"
-		>10/13</a><br>
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40481357"
+		>2/24</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <!--<a href=
 		"https://dordt.instructure.com/files/188147860/download?download_frd=1"
