Publish solutions to 363 PS#6 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/17/2023 4:06 pm)
+                              >(Last update:   2/18/2023 6:03 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -124,9 +124,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40444716"
 		>2/17</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/xxxxxxxxxxxxxxx/download?download_frd=1"
-		>10/08</a><br>-->      
+        <a href=
+		"https://dordt.instructure.com/files/255926279/download?download_frd=1"
+		>2/18</a><br>     
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
