publish slides, video for 363 today 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -192,19 +192,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Intro Fourier Transform, Quintessential Ex, Duality, 1 &harr; &delta;(<i>f</vi>) and &delta;(<i>t</vi>) &harr; 1<!--end comment--></td>  
    </TR><!-- Week of 2/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  2/20<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0220.pdf"><!-- -->
+	  2/20<!-- --></a><!-- --><br><!-- -><a href=
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0222.pdf"><!-- -->
       2/22<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0224.pdf"><!-- -->
       2/24<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=dmQVLr0UU9o">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=1xFduAJ-f_I">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=a5yP2p_VlCA">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=VjX6azStmMw">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->F.T.: Duality, Linearity, Symmetry, time, freq shift, Mod, deriv, integration <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
