publish solutions 304 ps#5 	modified:   S23/304/304S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/17/2023 4:54 pm)
+                              >(Last update: 2/21/2023 11:12 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -146,9 +146,9 @@ DO {
 		>2/20</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        <a href=
 		https://dordt.instructure.com/files/164454160/download?download_frd=1"
-		>2/19</a> -->
+		>2/21</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics: Digital-to-analog conversion, actuators <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
