Change PS#6 due date, 304 	modified:   S23/304/304S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/22/2023 7:22 am)
+                              >(Last update: 2/23/2023 9:47 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,7 +89,8 @@ DO {
         2/17
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/24
+        <a href="https://dordt.instructure.com/courses/3642050/assignments/40513812"
+		>2/27</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
@@ -132,7 +133,12 @@ DO {
 		If you are a fan of the Raspberry Pi and/or    <br>&nbsp;
 		Multithreaded programming (a foundation for    <br>&nbsp;
 		object-oriented programming) you might like to <br>&nbsp;
-		look at Ch 11 in Lee and Seshia.   
+		look at Ch 11 in Lee and Seshia.               <br>&nbsp;
+		                                               <br>&nbsp;<small>
+		On Monday, 2/20 Prof dDB mentioned in class that the </small><br>&nbsp;<small>
+		due date would be delayed to Monday, 2/27.  That </small><br>&nbsp;<small>
+		finally got posted here on Thursday evening, 2/23.</small>
+													   
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
