--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -196,17 +196,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0220.pdf"><!-- -->
 	  2/20<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0222.pdf"><!-- -->
-      2/22<!-- --></a><!-- --><br><!-- -><a href=
+      2/22<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0224.pdf"><!-- -->
-      2/24<!-- -></a><!-- --></td>
+      2/24<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=1xFduAJ-f_I">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=vKRjyUbvPgc">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=VjX6azStmMw">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=NZ_H-hD2xvs">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->F.T.: Duality, Linearity, Symmetry, time, freq shift, Mod, deriv, integration <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->F.T.: Energy Spectrum, Parseval, Conv in time mult in freq, Autocorr<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 3 AM</b>  Intro to DSB-LC, Spectrum of DSB-SC, Autotune<!--end comment--></td>  
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
