Publish slides, video for 304 today 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM

--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -197,17 +197,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0220_.pdf"><!-- -->
 	  2/20<!-- --></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0217.pdf"><!-- -->
-      2/22<!-- -></a><!-- --><br><!-- -><a href=
-      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0217.pdf"><!-- -->
-      2/24<!-- -></a><!-- --></td>
+      2/22<!-- -></a><!-- --><br><!-- --><a href=
+      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0224.pdf"><!-- -->
+      2/24<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=eYHPJyazRjQ">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=a5yP2p_VlCA">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=VjX6azStmMw">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Pcdcdh2nHm4">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Position sensing: Relative, quadrature; Absolute, grey, v or u scan<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Interrupts: atomic ops, stack, sources (Hw, int, Sw, Ex), Advantages<!--end comment--></td>  
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
