Delay 304 PS#6 to 3/03 	modified:   S23/304/304S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/23/2023 9:47 pm)
+                              >(Last update: 2/23/2023 2:07 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -90,7 +90,7 @@ DO {
 
    <!-- Due -->             </TD><TD align="center" valign="top">
         <a href="https://dordt.instructure.com/courses/3642050/assignments/40513812"
-		>2/27</a>
+		>3/03</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
@@ -137,7 +137,8 @@ DO {
 		                                               <br>&nbsp;<small>
 		On Monday, 2/20 Prof dDB mentioned in class that the </small><br>&nbsp;<small>
 		due date would be delayed to Monday, 2/27.  That </small><br>&nbsp;<small>
-		finally got posted here on Thursday evening, 2/23.</small>
+		finally got posted here on Thursday evening, 2/23.</small><br>&nbsp;<small>
+		On 2/24 Prof dDB further delayed it to Friday, 3/03.</small>
 													   
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
