Publish solutions to PS#7 363 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/24/2023 4:39 am)
+                              >(Last update:   2/25/2023 3:14 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -136,9 +136,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40481357"
 		>2/24</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        <!--<a href=
-		"https://dordt.instructure.com/files/188147860/download?download_frd=1"
-		>10/14</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/256359216/download?download_frd=1"
+		>2/25</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Transform                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
