--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -209,29 +209,29 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 3 AM</b>  Intro to DSB-LC, Spectrum of DSB-SC, Autotune<!--end comment--></td>  
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  2/27<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0227.pdf"><!-- -->
+	  2/27<!-- --></a><!-- --><br><!-- -><a href=
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0301.pdf"><!-- -->
       3/01<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0303.pdf"><!-- -->
       3/03<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=0RbPPefggiI">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2JfHGkzTNxI">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=BwUm2vlkNX4">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=zq3zTMX4COI">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Merits of a modulation: BW, Pwr, noise; Carrier recovery, Normalization<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0306.pdf"><!-- -->
 	  3/06<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0308.pdf"><!-- -->
       3/08<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0310.pdf"><!-- -->
       3/10<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=x0ZWvFjVdA4">V</A><!-- --><br>
@@ -244,11 +244,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0313.pdf"><!-- -->
 	  3/13<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0315.pdf"><!-- -->
       3/15<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0317.pdf"><!-- -->
       3/17<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
@@ -261,11 +261,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0320.pdf"><!-- -->
 	  3/20<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0322.pdf"><!-- -->
       3/22<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0324.pdf"><!-- -->
       3/24<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=TVK-XM9daro">V</A><!-- --><br>
@@ -278,11 +278,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0327.pdf"><!-- -->
 	  3/27<!-- -></a><!-- --><br><!-- -<a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0329.pdf"><!-- -->
       3/29<!-- -</a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0331.pdf"><!-- -->
       3/31<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Do26ZnJB5Tk">V</A><!-- --><br>
@@ -295,11 +295,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0403.pdf"><!-- -->
 	  4/03<!-- -></a><!-- --><br><!-- -<a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0405.pdf"><!-- -->
       4/05<!-- -</a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0407.pdf"><!-- -->
       4/07<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=8U1xwQmcqrc">V</A><!-- --><br>
@@ -312,11 +312,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0410.pdf"><!-- -->
 	  4/10<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0412.pdf"><!-- -->
       4/12<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0414.pdf"><!-- -->
       4/14<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=I-OkHqm48jc">V</A><!-- --><br>
@@ -329,11 +329,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0417.pdf"><!-- -->
 	  4/17<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0419.pdf"><!-- -->
       4/19<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0412.pdf"><!-- -->
       4/21<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=fIJyjTidzjA">V</A><!-- --><br>
@@ -346,11 +346,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 4/24 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0424.pdf"><!-- -->
 	  4/24<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0426.pdf"><!-- -->
       4/26<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0428.pdf"><!-- -->
       4/28<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=fIJyjTidzjA">V</A><!-- --><br>
@@ -363,11 +363,11 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0501.pdf"><!-- -->
 	  5/01<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0503.pdf"><!-- -->
       5/03<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0505.pdf"><!-- -->
       5/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=6mWogwz0NbQ">V</A><!-- --><br>
