publish slides, video for 363 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -121,7 +121,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Channel model, Experiment v. theory, signal models, intro matlab<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Matlab & Matrix multiplication, common signals, two sinc functions<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Symmetry (even, odd, hermitian), power (watts v. watts relative to 1 &Omega;) <!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Symmetry (even, odd, Hermitian), power (watts v. watts relative to 1 &Omega;) <!--end comment--></td>  
    </TR><!-- Week of 1/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -171,7 +171,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=puqSwKGju-M">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Introduction to Fourier Series, The Quintessential Example<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->Spectrograms, F.S. of a cosine, Disscussion: appliation of F.S. to photos<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Spectrograms, F.S. of a cosine, Discussion: application of F.S. to photos<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->F.S. of common signals, Exponential, Trigonometric, Compact F.S.<!--end comment--></td>  
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -211,18 +211,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/256465940/download?download_frd=1"><!-- -->
-	  2/27<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/01<!-- -></a><!-- --><br><!-- -><a href=
+	  2/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/256601613/download?download_frd=1"><!-- -->
+      3/01<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/03<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2JfHGkzTNxI">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=BwUm2vlkNX4">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=U9nD0c4joAE">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=zq3zTMX4COI">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Merits of a modulation: BW, Pwr, noise; Carrier recovery, Normalization<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->DSB-LC envelope detection.  Efficiency of DSB-LC<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
