--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -211,18 +211,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0227.pdf"><!-- -->
-	  2/27<!-- --></a><!-- --><br><!-- -><a href=
+	  2/27<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0301.pdf"><!-- -->
-      3/01<!-- -></a><!-- --><br><!-- -><a href=
+      3/01<!-- --></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0303.pdf"><!-- -->
       3/03<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2JfHGkzTNxI">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=BwUm2vlkNX4">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=U9nD0c4joAE">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=zq3zTMX4COI">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Merits of a modulation: BW, Pwr, noise; Carrier recovery, Normalization<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->DSB-LC envelope detection.  Efficiency of DSB-LC<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
