--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -212,18 +212,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/256467502/download?download_frd=1"><!-- -->
-	  2/27<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/01<!-- -></a><!-- --><br><!-- -><a href=
+	  2/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/256618881/download?download_frd=1"><!-- -->
+      3/01<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/03<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ZcDF1mcICZI">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=BwUm2vlkNX4">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=zq3zTMX4COI">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=O4VCwy1qOAw">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=O4VCwy1qOAw">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Object oriented, why C?, Interrupts: density, latency, interval<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Interrupt interval calculations<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
