--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -214,17 +214,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0227.pdf"><!-- -->
 	  2/27<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0301.pdf"><!-- -->
-      3/01<!-- --></a><!-- --><br><!-- -><a href=
+      3/01<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0303.pdf"><!-- -->
-      3/03<!-- -></a><!-- --></td>
+      3/03<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=ZcDF1mcICZI">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=O4VCwy1qOAw">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=zq3zTMX4COI">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=8hev47HrSC4">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Object oriented, why C?, Interrupts: density, latency, interval<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Interrupt interval calculations<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Critical Regions, Task Sch, HW counter/timers, In/Direct meas., Memory<!--end comment--></td>  
    </TR><!-- Week of 3/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
