--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/23/2023 2:07 pm)
+                              >(Last update: 3/03/2023 9:03 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,32 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/03
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/3642050/assignments/40575140"
+		>3/17</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		https://dordt.instructure.com/files/166372662/download?download_frd=1"
+		>3/02</a>
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Interrupts & Critical Regions          <br>&nbsp;
+		Read:  Class notes interrupts                  <br>&nbsp;
+		Also read Chapter 9 in <a href=
+		"https://ptolemy.berkeley.edu/books/leeseshia/"
+		>Lee and Seshia</a>                            <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do this</DO> <a href="304S23P07_INTER.docx"
+		>problem on interrupts</a>.        
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
