--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   3/01/2023 9:44 am)
+                              >(Last update:   3/03/2023 9:03 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,25 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/03<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40574933"
+		>3/24</a><br>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/189084713/download?download_frd=1"
+		>10/28</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Fourier Trans., Mod. Thm, DSB-SC, DSB-LC<br>&nbsp;
+        Read Ch 2, Sec. 2.3  Ch 3 Sec. 3.2.3 thru 3.3  <br>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>2.47, 2.50, 3.11, 3.14</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  8
