--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   3/03/2023 9:03 pm)
+                              >(Last update:   3/04/2023 3:59 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -113,9 +113,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40523107"
 		>3/03</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/188379567/download?download_frd=1"
-		>10/27</a>--><br>        
+        <a href=
+		"https://dordt.instructure.com/files/256810019/download?download_frd=1"
+		>3/04</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linear Modulation, DSB-SC             <br>&nbsp;
         Read Ch 3 Sec. 3.1, 3.2.1, 3.2.2               <br>&nbsp;
