Pubish slides, videos for today for 304, 363, also PS#08 for 304 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/304/304S23PS.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/04/2023 3:59 pm) 
+                              >(Last update: 3/17/2023 12:19 pm) 
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,73 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/17
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href=
+		"https://dordt.instructure.com/courses/3642050/assignments/40681804"
+		>3/24</a>        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		https://dordt.instructure.com/files/167890454/download?download_frd=1"
+		>4/01</a>
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Task scheduling, Measuring freq, period<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+		        Memory, AC load control, Serial        <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				interfacing and RS-232, Ethernet       <br>&nbsp;
+				                                       <br>&nbsp;
+        Read <a href="http://en.wikipedia.org/wiki/RS-232"
+            >RS-232</a> in Wikipedia                   <BR>&nbsp;
+                                                       <br>&nbsp;
+        <DO>Do this problem:</DO>                               <br>&nbsp;
+        Plot voltage vs. time of the Tx line in RS-232 <br>&nbsp;
+        for sending this text: "Z#" (without the       <br>&nbsp;
+        quotation marks, with a capital "Z").  Assume  <br>&nbsp;
+        &plusmn;12 V signal voltages, 53 kbaud, eight data 
+                                                       <br>&nbsp;
+        bits, and one stop bit.  Be sure to label your <br>&nbsp;
+        axes properly.  An ASCII table can be found in <br>&nbsp;
+        many places, e.g. <a href="http://www.asciitable.com"
+                         >http://www.asciitable.com</a><br>&nbsp;
+        Note that the illustration in the Wikipedia    <br>&nbsp;
+        reading does not have properly labeled axes.   <br>&nbsp;
+        Specifically the the independent axis lacks    <br>&nbsp;
+        scale and units.                               <br>&nbsp;
+                                                       <br>&nbsp;
+        Optional:  The entire RS-232 standard is       <br>&nbsp;
+        available from Dordt's library.  <i>Interface  <br>&nbsp;
+        Between Data Terminal Equipment And Data       <br>&nbsp;
+        Circuit-Terminating Equipment Employing Serial <br>&nbsp;
+        Binary Data Interchange</i> TK7887.5 .I57 1997 <br>&nbsp;
+                                                       <br>&nbsp;
+        Optional:  Read about <a href=
+        "http://en.wikipedia.org/wiki/Teleprinter"
+                              >teleprinters</a>.       <br>&nbsp;
+                                                       <br>&nbsp;
+        Very Optional:  Listen to a <a href=
+        "http://www.npr.org/templates/story/story.php?storyId=10554017"
+                              >Teletype machine</a>.   <br>&nbsp;
+        And see a <a href=
+        "http://www.youtube.com/watch?feature=player_detailpage&v=2B-U-5ylvWo"
+            >Teletype machine</a> connected to a       <br>&nbsp;
+        Digital Equipment Corporation (DEC, a brand)   <br>&nbsp;
+        model PDP-8/e computer.  This computer could be<br>&nbsp;
+        booted "manually" via a bank of switches that  <br>&nbsp;
+        allows the direct entry of machine code word-by<br>&nbsp;
+        word, executing each instruction as fast as the<br>&nbsp;
+        operator can enter the code. Wow, that's fast! <br>&nbsp;
+		                                               <br>&nbsp;
+		Optional: Example of RS-232 debug ports in     <br>&nbsp;
+		various products leaving <a href=
+		"https://www.youtube.com/watch?time_continue=24&v=h5PRvBpLuJs&feature=emb_logo" 
+		>security vulnerabilities</a>.
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
