--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -248,17 +248,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
 	  3/13<!-- -></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/257365331/download?download_frd=1"><!-- -->
-      3/15<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/17<!-- -></a><!-- --></td>
+      3/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/257574729/download?download_frd=1"><!-- -->
+      3/17<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Rp02gy8rj2M">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Xi3yVnm9rTQ">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=shbI2MhvFOA">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, Spring Break.</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Course review, Memory types, Harvard v. Von Neuman, Char. of mem<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->More on memory, AC load control via SCR<!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
