--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -247,17 +247,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0313.pdf"><!-- -->
 	  3/13<!-- -></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0315.pdf"><!-- -->
-      3/15<!-- --></a><!-- --><br><!-- -><a href=
+      3/15<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0317.pdf"><!-- -->
-      3/17<!-- -></a><!-- --></td>
+      3/17<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=VbE89Vk4dPY">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Xi3yVnm9rTQ">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=igJLAWorsFc">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, Spring Break.</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Detail on QAM; AM-stereo, NTSC (analog) color TV applications of QAM</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->More on TV, other AM mods e.g. M-QAM, Freq. Division Multiplexing (FDM)<!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
