--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -172,8 +172,8 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=9gVPK6-Gq74">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Differential and Single ended signaling, Intro A/D conversion<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->Anti-ailias filter, Nyquist sampling, Quantization & Coding in A/D conv.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Techniques in measurment: Time, Temperature<!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment-->Anti-alias filter, Nyquist sampling, Quantization & Coding in A/D conv.<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment-->Techniques in measurement: Time, Temperature<!--end comment--></td>  
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -261,19 +261,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->More on memory, AC load control via SCR<!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  3/20<!-- -></a><!-- --><br><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/257675465/download?download_frd=1"><!-- -->
+	  3/20<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/22<!-- -></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/24<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=TVK-XM9daro">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=I7OJ36O6GuQ">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=lhPnguezxr0">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->AC load control: Triac, Capacitive, VFD, Intro to Serial interfacing<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
