--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -260,19 +260,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->More on TV, other AM mods e.g. M-QAM, Freq. Division Multiplexing (FDM)<!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0320.pdf"><!-- -->
-	  3/20<!-- -></a><!-- --><br><!-- -><a href=
+	  3/20<!-- --></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0322.pdf"><!-- -->
       3/22<!-- -></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0324.pdf"><!-- -->
       3/24<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=TVK-XM9daro">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=PvU9enEVs1Q">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=lhPnguezxr0">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link</font><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->FDM, TRF, Regenerative tuning, Superhetrodyne tuning<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
