--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -264,17 +264,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0320.pdf"><!-- -->
 	  3/20<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0322.pdf"><!-- -->
-      3/22<!-- --></a><!-- --><br><!-- -><a href=
+      3/22<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0324.pdf"><!-- -->
-      3/24<!-- -></a><!-- --></td>
+      3/24<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=PvU9enEVs1Q">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=8TTSN1RGzok">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=RQmzVPW2vVk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->FDM, TRF, Regenerative tuning, Superhetrodyne tuning<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Superheterodyne tuning in detail, Image and spurious frequencies<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Double conversion superheterodyne, Single Sideband (SSB), Hilbert<!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
