--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -265,17 +265,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/257675465/download?download_frd=1"><!-- -->
 	  3/20<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/257807189/download?download_frd=1"><!-- -->
-      3/22<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/24<!-- -></a><!-- --></td>
+      3/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/257977361/download?download_frd=1"><!-- -->
+      3/24<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=I7OJ36O6GuQ">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=uE2_BdV6BXw">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=XBCB_6tDfR0">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->AC load control: Triac, Capacitive, VFD, Intro to Serial interfacing<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->RS-232 cables, electrical stds, timing, IP, ling parameters, Plugs/jacks<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->OS support for RS-232, Huffman coding, Power over RS-232 <!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
